# sync-camera-disk

./: .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  devenv.nix  gphoto2_scratch.py  justfile  pipeline_scratch.py  pyproject.toml
.github/workflows/: python-test.yml
sync_camera_disk/: config.py  destination.py  disks.py  file.py  filter_disks.py  macos.py  main.py  operation.py  source.py
sync_camera_disk/testing/: examples.py
sync_camera_disk/testing/files/: mac_diskutil_atem_extreme_iso_sdi.json  mac_diskutil_atomos_shogun_ultra.json  mac_diskutil_dji_osmo_pocket.json  mac_diskutil_drobo.json  mac_diskutil_fujifilm_x100.json  mac_diskutil_fujifilm_xe5.json  mac_diskutil_insta360_go_2.json  mac_diskutil_rode_interview_mic_pro.json
tests/: test_destination.py  test_disks.py  test_filter_disks.py  test_macos.py  test_main.py  test_operation.py  test_source.py
tests/examples/: mac_diskutil_dji.json  mac_diskutil_drobo.json  mac_diskutil_gopro_10.json  mac_diskutil_insta360_one.json  mac_diskutil_sony_a7_iv.json
