[tool.poetry]
name = "sync-camera-disk"
version = "0.1.0"
description = "Sync files from camera SDs to different media"
authors = ["Michael Twomey <mick@twomeylee.name>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sync_camera_disk"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
rich = "^13.4.1"
pydantic = "^1.10.9"
pydantic-yaml = "^1.0.0a2"
tqdm = "^4.65.0"
structlog = "^23.1.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.272"
black = "^23.3.0"
mypy = "^1.3.0"
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
coverage = {extras = ["toml"], version = "^7.2.7"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sync-camera-disk = 'sync_camera_disk.main:app'
