[tool.poetry]
name = "sync-camera-disk"
version = "0.7.0"
description = "Sync files from camera SDs to different media"
authors = ["Michael Twomey <mick@twomeylee.name>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/micktwomey/sync-camera-disk/"
repository = "https://github.com/micktwomey/sync-camera-disk/"
packages = [{ include = "sync_camera_disk" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
typer = "^0.9.0"
rich = "^13.4.1"
pydantic = "^1.10.9"
pydantic-yaml = "^1.0.0a2"
structlog = "^23.1.0"
xdg-base-dirs = "^6.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
coverage = { extras = ["toml"], version = "*" }
pre-commit = "*"
changelog-manager = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sync-camera-disk = 'sync_camera_disk.main:app'

[tool.mypy]
strict = true
plugins = "pydantic.mypy"

[tool.ruff.lint]
extend-select = ["I"]
